# mr-do-upnp-c

./: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  push.sh
.github/workflows/: docker-image-upnp-c.yml
docker/: Dockerfile  entrypoint.sh  entrypoint.sh 
etc/: asound.conf  snapserver.conf
patches/: 01-strip-video.diff  02-drop-texturepacker.diff
settings/: advancedsettings.xml  guisettings.xml
source/: main.cpp  renderer.c
src/: RendererDevice.cpp  RendererDevice.hpp
